# BugSquashGame

./: BugSquashApp.cpp  BugSquashApp.h  CMakeLists.txt  README.md  main.cpp  pch.h
GameLib/: BossBug.cpp  BossBug.h  Bug.cpp  Bug.h  BugVisitor.cpp  BugVisitor.h  CMakeLists.txt  Feature.cpp  Feature.h  Game.cpp  Game.h  GameView.cpp  GameView.h  GarbageBug.cpp  GarbageBug.h  Item.cpp  Item.h  ItemVisitor.cpp  ItemVisitor.h  Level.cpp  Level.h  MainFrame.cpp  MainFrame.h  NullBug.cpp  NullBug.h  Program.cpp  Program.h  RedundancyFly.cpp  RedundancyFly.h  ScoreBoard.cpp  ScoreBoard.h  ids.h  pch.h
Tests/: BugTest.cpp  CMakeLists.txt  FatBugTest.cpp  GameTest.cpp  HitTest.cpp  ItemTest.cpp  LevelLoaderTest.cpp  ScoreBoardTest.cpp  gtest_main.cpp
Tests/Test-Data/: SingleBug.xml  garbage-bug-3.xml
data/: level0.xml  level3.xml
